# automated-dart-scorer

./: .gitignore  Dockerfile  README.md  demo.html  main.py  manifest.json  mobile-app.html  pyproject.toml  service-worker.js
app/: main.py  test_dartboard_detector.py
app/services/: dart_detector.py  dart_scorer.py  dartboard_detector.py
app/tests/: test_dart_detector.py  test_dartboard_detector.py  test_scorer.py
