[project]
name = "automated-dart-scorer"
version = "0.1.0"
description = "A smart, automated dart scoring app that tracks throws, calculates scores in real time, and simplifies game management for dart players."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pytesseract>=0.3.10",
    "ipykernel>=6.30.1",
    "scipy>=1.16.2",
]
