[project]
name = "automated-dart-scorer"
version = "0.1.0"
description = "A smart, automated dart scoring app that tracks throws, calculates scores in real time, and simplifies game management for dart players."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "scipy>=1.16.2",
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
]
